Changing value of the sidebar page overlay to use percentages and prevent overflow when resizing the browser

--- a/themes/shell/styles/layout/_header.scss
+++ b/themes/shell/styles/layout/_header.scss
@@ -198,7 +198,7 @@
     &:before{
       content: '';
       position: absolute;
-      right: 100vw;
+      right: 100%;
       width: 100%;
       height: 100%;
       z-index: 25;
@@ -267,6 +267,7 @@
 
   // Active menu settings
   .menu-active{
+
     // Header
     header{
       right: 0;
